# golioth-rs

./: Cargo.toml  README.md  build.rs  memory.x  rust-toolchain.toml
.cargo/: config.toml
src/: config.rs  errors.rs  golioth.rs  heap.rs  keys.rs  lib.rs  main.rs  utils.rs  zephyr.hex
